--- a/BeatDave.Web/Web.config
+++ b/BeatDave.Web/Web.config
@@ -1,21 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-
     <configSections>
         <section name="dotless"
                  type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
     </configSections>
-
     <system.webServer>
-
         <validation validateIntegratedModeConfiguration="false" />
-        
-        <modules runAllManagedModulesForAllRequests="true" />
-        
+        <modules runAllManagedModulesForAllRequests="true">
+            <add name="SuppressFormsAuthenticationRedirectModule"
+                 type="BeatDave.Web.Infrastructure.SuppressFormsAuthenticationRedirectModule,BeatDave.Web"/>
+        </modules>
         <handlers>
             <add name="dotless"
                  path="*.less"
@@ -24,9 +22,7 @@
                  resourceType="File"
                  preCondition="" />
         </handlers>
-    
     </system.webServer>
-
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
@@ -52,7 +48,11 @@
 
     <system.web>
         <compilation debug="true"
-                     targetFramework="4.0" />                
+                     targetFramework="4.0" />
+        <httpModules>
+            <add name="SuppressFormsAuthenticationRedirectModule"
+                 type="BeatDave.Web.Infrastructure.SuppressFormsAuthenticationRedirectModule,BeatDave.Web"/>
+        </httpModules>
         <pages>
             <namespaces>
                 <add namespace="System.Web.Helpers" />
@@ -63,13 +63,11 @@
                 <add namespace="System.Web.WebPages" />
             </namespaces>
         </pages>
-        
         <httpHandlers>
             <add path="*.less"
                  verb="GET"
                  type="dotless.Core.LessCssHttpHandler, dotless.Core" />
         </httpHandlers>
-
         <customErrors mode="Off"
                       redirectMode="ResponseRewrite"
                       defaultRedirect="/Views/Error/500.htm">
@@ -77,35 +75,73 @@
             <error statusCode="404" redirect="/Views/Error/404.htm" />
             <error statusCode="500" redirect="/Views/Error/500.htm" />
         </customErrors>
-        
+
         <authentication mode="Forms">
-            <forms loginUrl="~/Account/Login"
+            <forms loginUrl="~/Security/Login"
                    timeout="2880" />
         </authentication>
 
         <globalization culture="auto"
-                       uiCulture="auto"/>
+                       uiCulture="auto" />
+
+        <profile defaultProvider="DefaultProfileProvider">
+            <providers>
+                <add name="DefaultProfileProvider"
+                     type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+                     connectionStringName="BeatDave_AspNet"
+                     applicationName="/" />
+            </providers>
+        </profile>
+
+        <membership defaultProvider="DefaultMembershipProvider">
+            <providers>
+                <add name="DefaultMembershipProvider"
+                     type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+                     connectionStringName="BeatDave_AspNet"
+                     enablePasswordRetrieval="false"
+                     enablePasswordReset="true"
+                     requiresQuestionAndAnswer="false"
+                     requiresUniqueEmail="false"
+                     maxInvalidPasswordAttempts="5"
+                     minRequiredPasswordLength="6"
+                     minRequiredNonalphanumericCharacters="0"
+                     passwordAttemptWindow="10"
+                     applicationName="BeatDave" />
+            </providers>
+        </membership>
+
+        <roleManager defaultProvider="DefaultRoleProvider">
+            <providers>
+                <add name="DefaultRoleProvider"
+                     type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+                     connectionStringName="BeatDave_AspNet"
+                     applicationName="BeatDave" />
+            </providers>
+        </roleManager>
+
+        <sessionState mode="InProc"
+                      customProvider="DefaultSessionProvider">
+            <providers>
+                <add name="DefaultSessionProvider"
+                     type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+            </providers>
+        </sessionState>
     </system.web>
 
     <system.net>
-
         <mailSettings>
             <smtp deliveryMethod="SpecifiedPickupDirectory">
-                <specifiedPickupDirectory pickupDirectoryLocation="C:\Users\George\Desktop\Emails"/>
+                <specifiedPickupDirectory pickupDirectoryLocation="C:\Users\George\Desktop\Emails" />
             </smtp>
         </mailSettings>
-
         <defaultProxy enabled="true" />
-
         <settings>
             <!-- This setting causes .NET to check certificate revocation lists (CRL)
                  before trusting HTTPS certificates.  But this setting tends to not
                  be allowed in shared hosting environments. -->
             <servicePointManager checkCertificateRevocationList="true" />
         </settings>
-
     </system.net>
-
     <appSettings>
         <add key="webpages:Version"
              value="2.0.0.0" />
@@ -118,14 +154,14 @@
         <add key="UnobtrusiveJavaScriptEnabled"
              value="true" />
     </appSettings>
-
     <connectionStrings>
         <add name="BeatDave"
              connectionString="Url=http://localhost:8080;Database=BeatDave" />
+        <add name="BeatDave_AspNet"
+             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-BeatDave.Web-201254112359;Integrated Security=True"
+             providerName="System.Data.SqlClient" />
     </connectionStrings>
-
     <dotless minifyCss="false"
              cache="true"
              web="false" />
-    
 </configuration>
