--- a/BeatDave.Web/packages.config
+++ b/BeatDave.Web/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AspNetMvc" version="4.0.20126.16343" />
   <package id="AspNetRazor.Core" version="2.0.20126.16343" />
@@ -21,5 +21,7 @@
   <package id="System.Net.Http" version="2.0.20126.16343" />
   <package id="System.Net.Http.Formatting" version="4.0.20126.16343" />
   <package id="System.Web.Http.Common" version="4.0.20126.16343" />
-  <package id="WebActivator" version="1.2.0.0" />
+  <package id="System.Web.Providers" version="1.1" />
+  <package id="System.Web.Providers.Core" version="1.0" />
+  <package id="WebActivator" version="1.4.4" />
 </packages>
