--- a/BeatDave.Web/Web.config
+++ b/BeatDave.Web/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -12,7 +12,7 @@
         <validation validateIntegratedModeConfiguration="false" />
         <modules runAllManagedModulesForAllRequests="true">
             <add name="SuppressFormsAuthenticationRedirectModule"
-                 type="BeatDave.Web.Infrastructure.SuppressFormsAuthenticationRedirectModule,BeatDave.Web"/>
+                 type="BeatDave.Web.Infrastructure.SuppressFormsAuthenticationRedirectModule,BeatDave.Web" />
         </modules>
         <handlers>
             <add name="dotless"
@@ -45,13 +45,12 @@
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
-
     <system.web>
         <compilation debug="true"
                      targetFramework="4.0" />
         <httpModules>
             <add name="SuppressFormsAuthenticationRedirectModule"
-                 type="BeatDave.Web.Infrastructure.SuppressFormsAuthenticationRedirectModule,BeatDave.Web"/>
+                 type="BeatDave.Web.Infrastructure.SuppressFormsAuthenticationRedirectModule,BeatDave.Web" />
         </httpModules>
         <pages>
             <namespaces>
@@ -71,19 +70,19 @@
         <customErrors mode="Off"
                       redirectMode="ResponseRewrite"
                       defaultRedirect="/Views/Error/500.htm">
-            <error statusCode="400" redirect="/Views/Error/500.htm" />
-            <error statusCode="404" redirect="/Views/Error/404.htm" />
-            <error statusCode="500" redirect="/Views/Error/500.htm" />
+            <error statusCode="400"
+                   redirect="/Views/Error/500.htm" />
+            <error statusCode="404"
+                   redirect="/Views/Error/404.htm" />
+            <error statusCode="500"
+                   redirect="/Views/Error/500.htm" />
         </customErrors>
-
         <authentication mode="Forms">
             <forms loginUrl="~/Security/Login"
                    timeout="2880" />
         </authentication>
-
         <globalization culture="auto"
                        uiCulture="auto" />
-
         <profile defaultProvider="DefaultProfileProvider">
             <providers>
                 <add name="DefaultProfileProvider"
@@ -92,7 +91,6 @@
                      applicationName="/" />
             </providers>
         </profile>
-
         <membership defaultProvider="DefaultMembershipProvider">
             <providers>
                 <add name="DefaultMembershipProvider"
@@ -109,7 +107,6 @@
                      applicationName="BeatDave" />
             </providers>
         </membership>
-
         <roleManager defaultProvider="DefaultRoleProvider">
             <providers>
                 <add name="DefaultRoleProvider"
@@ -118,7 +115,6 @@
                      applicationName="BeatDave" />
             </providers>
         </roleManager>
-
         <sessionState mode="InProc"
                       customProvider="DefaultSessionProvider">
             <providers>
@@ -127,7 +123,6 @@
             </providers>
         </sessionState>
     </system.web>
-
     <system.net>
         <mailSettings>
             <smtp deliveryMethod="SpecifiedPickupDirectory">
