Sorted out authentication & roles

--- a/BeatDave.Web/Web.config
+++ b/BeatDave.Web/Web.config
@@ -79,7 +79,7 @@
         </customErrors>
         <authentication mode="Forms">
             <forms loginUrl="~/Security/Login"
-                   timeout="2880" />
+                   timeout="2880"/>
         </authentication>
         <globalization culture="auto"
                        uiCulture="auto" />
@@ -88,7 +88,7 @@
                 <add name="DefaultProfileProvider"
                      type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
                      connectionStringName="BeatDave_AspNet"
-                     applicationName="/" />
+                     applicationName="BeatDave" />
             </providers>
         </profile>
         <membership defaultProvider="DefaultMembershipProvider">
@@ -107,7 +107,7 @@
                      applicationName="BeatDave" />
             </providers>
         </membership>
-        <roleManager defaultProvider="DefaultRoleProvider">
+        <roleManager defaultProvider="DefaultRoleProvider" enabled="true">
             <providers>
                 <add name="DefaultRoleProvider"
                      type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
@@ -153,7 +153,7 @@
         <add name="BeatDave"
              connectionString="Url=http://localhost:8080;Database=BeatDave" />
         <add name="BeatDave_AspNet"
-             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-BeatDave.Web-201254112359;Integrated Security=True"
+             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BeatDave_AspNet;Integrated Security=True"
              providerName="System.Data.SqlClient" />
     </connectionStrings>
     <dotless minifyCss="false"
