--- a/BeatDave.Web/BeatDave.Web.csproj
+++ b/BeatDave.Web/BeatDave.Web.csproj
@@ -147,13 +147,13 @@
   <ItemGroup>
     <Compile Include="Areas\Api_v1\Api_v1AreaRegistration.cs" />
     <Compile Include="Areas\Api_v1\Controllers\UsersController.cs" />
-    <Compile Include="Areas\Api_v1\Controllers\DataPointsController.cs" />
-    <Compile Include="Areas\Api_v1\Controllers\DataSetsController.cs" />
+    <Compile Include="Areas\Api_v1\Controllers\RecordsController.cs" />
+    <Compile Include="Areas\Api_v1\Controllers\LogBooksController.cs" />
     <Compile Include="Areas\Api_v1\Models\UserView.cs" />
     <Compile Include="Areas\Api_v1\Models\UserInput.cs" />
-    <Compile Include="Areas\Api_v1\Models\DataPointInput.cs" />
-    <Compile Include="Areas\Api_v1\Models\DataSetInput.cs" />
-    <Compile Include="Areas\Api_v1\Models\DataSetView.cs" />
+    <Compile Include="Areas\Api_v1\Models\RecordInput.cs" />
+    <Compile Include="Areas\Api_v1\Models\LogBookInput.cs" />
+    <Compile Include="Areas\Api_v1\Models\LogBookView.cs" />
     <Compile Include="Areas\App\AppAreaRegistration.cs" />
     <Compile Include="Areas\App\Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -163,7 +163,7 @@
     <Compile Include="Infrastructure\AutoMapper\AutoMapperConfiguration.cs" />
     <Compile Include="Infrastructure\AutoMapper\AutoMapperExtensions.cs" />
     <Compile Include="Infrastructure\AutoMapper\Profiles\UserProfile.cs" />
-    <Compile Include="Infrastructure\AutoMapper\Profiles\DataSetProfile.cs" />
+    <Compile Include="Infrastructure\AutoMapper\Profiles\LogBookProfile.cs" />
     <Compile Include="Infrastructure\AutoMapper\Resolvers\MvcHtmlStringConverter.cs" />
     <Compile Include="Infrastructure\AutoMapper\Resolvers\RavenIdResolver.cs" />
     <Compile Include="Infrastructure\Controllers\FatApiController.cs" />
@@ -177,8 +177,8 @@
     <Compile Include="Models\Competition.cs" />
     <Compile Include="Models\TransforedDataSet.cs" />
     <Compile Include="Models\DateRange.cs" />
-    <Compile Include="Models\DataPoint.cs" />
-    <Compile Include="Models\DataSet.cs" />
+    <Compile Include="Models\Record.cs" />
+    <Compile Include="Models\LogBook.cs" />
     <Compile Include="Models\FacebookAccount.cs" />
     <Compile Include="Models\Friend.cs" />
     <Compile Include="Models\ISocialNetworkAccount.cs" />
