Added Exceptions to Domain

--- a/BeatDave.Domin/BeatDave.Domin.csproj
+++ b/BeatDave.Domin/BeatDave.Domin.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\EntryLoggedEvent.cs" />
+    <Compile Include="Exceptions\UnauthorizedException.cs" />
+    <Compile Include="Exceptions\DomainException.cs" />
     <Compile Include="Infrastructure\DomainEvents.cs" />
     <Compile Include="Entities\Competition.cs" />
     <Compile Include="Entities\DateRange.cs" />
@@ -63,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SocializerService.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
