Removed needless abstractions
Changed username to be the key of the user object

--- a/BeatDave.Web/Web.config
+++ b/BeatDave.Web/Web.config
@@ -153,7 +153,7 @@
         <add name="BeatDave"
              connectionString="Url=http://localhost:8080;Database=BeatDave" />
         <add name="BeatDave_AspNet"
-             connectionString="Data Source=.;Initial Catalog=BeatDave_AspNet;Integrated Security=True"
+             connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BeatDave_AspNet;Integrated Security=True"
              providerName="System.Data.SqlClient" />
     </connectionStrings>
     <dotless minifyCss="false"
