--- a/BeatDave.Web/BeatDave.Web.csproj
+++ b/BeatDave.Web/BeatDave.Web.csproj
@@ -146,9 +146,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Areas\Api_v1\Api_v1AreaRegistration.cs" />
+    <Compile Include="Areas\Api_v1\Controllers\CommentsController.cs" />
     <Compile Include="Areas\Api_v1\Controllers\UsersController.cs" />
-    <Compile Include="Areas\Api_v1\Controllers\LogBookEntriesController.cs" />
+    <Compile Include="Areas\Api_v1\Controllers\EntriesController.cs" />
     <Compile Include="Areas\Api_v1\Controllers\LogBooksController.cs" />
+    <Compile Include="Areas\Api_v1\Models\CommentInput.cs" />
+    <Compile Include="Areas\Api_v1\Models\DateTimeView.cs" />
     <Compile Include="Areas\Api_v1\Models\UserView.cs" />
     <Compile Include="Areas\Api_v1\Models\UserInput.cs" />
     <Compile Include="Areas\Api_v1\Models\EntryInput.cs" />
@@ -164,10 +167,11 @@
     <Compile Include="Infrastructure\AutoMapper\AutoMapperExtensions.cs" />
     <Compile Include="Infrastructure\AutoMapper\Profiles\UserProfile.cs" />
     <Compile Include="Infrastructure\AutoMapper\Profiles\LogBookProfile.cs" />
-    <Compile Include="Infrastructure\AutoMapper\Resolvers\MvcHtmlStringConverter.cs" />
+    <Compile Include="Infrastructure\AutoMapper\Resolvers\DateTimeViewResolver.cs" />
     <Compile Include="Infrastructure\AutoMapper\Resolvers\RavenIdResolver.cs" />
     <Compile Include="Infrastructure\Controllers\FatApiController.cs" />
     <Compile Include="Infrastructure\Controllers\FatController.cs" />
+    <Compile Include="Infrastructure\Extensions\DateTimeExtensions.cs" />
     <Compile Include="Infrastructure\Extensions\DyanmicExtensions.cs" />
     <Compile Include="Infrastructure\Filters\BasicAuthorizeAttribute.cs" />
     <Compile Include="Infrastructure\Filters\RemoteRequiresHttpsAttribute.cs" />
