Fixed broken build & added GetUser

--- a/BeatDave.Web/Web.config
+++ b/BeatDave.Web/Web.config
@@ -106,7 +106,7 @@
   </appSettings>
   <connectionStrings>
     <add name="BeatDave" connectionString="Url=http://localhost:8080;Database=BeatDave" />
-    <add name="BeatDave_AspNet" connectionString="Data Source=.;Initial Catalog=BeatDave_AspNet;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BeatDave_AspNet" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BeatDave_AspNet;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <dotless minifyCss="false" cache="true" web="false" />
 </configuration>
