--- a/BeatDave.Web/BeatDave.Web.csproj
+++ b/BeatDave.Web/BeatDave.Web.csproj
@@ -164,12 +164,16 @@
     <Compile Include="Infrastructure\AutoMapper\Profiles\UserProfile.cs" />
     <Compile Include="Infrastructure\AutoMapper\Resolvers\DateTimeViewResolver.cs" />
     <Compile Include="Infrastructure\AutoMapper\Resolvers\RavenIdResolver.cs" />
+    <Compile Include="Infrastructure\Bootstrapper.cs" />
     <Compile Include="Infrastructure\Controllers\FatApiController.cs" />
     <Compile Include="Infrastructure\Controllers\FatController.cs" />
+    <Compile Include="Infrastructure\Controllers\StructureMapControllerFactory.cs" />
+    <Compile Include="Infrastructure\Controllers\StructureMapDependencyResolver.cs" />
     <Compile Include="Infrastructure\Extensions\DateTimeExtensions.cs" />
     <Compile Include="Infrastructure\Extensions\DyanmicExtensions.cs" />
     <Compile Include="Infrastructure\Filters\BasicAuthorizeAttribute.cs" />
     <Compile Include="Infrastructure\Filters\RemoteRequiresHttpsAttribute.cs" />
+    <Compile Include="Infrastructure\Filters\SaveChangesOnExit.cs" />
     <Compile Include="Infrastructure\Formatters\JsonDotNetFormatter.cs" />
     <Compile Include="Infrastructure\HttpModules\SuppressFormsAuthenticationRedirectModule.cs" />
     <Compile Include="Infrastructure\Validation\ModelStateExtensions.cs" />
