--- a/BeatDave.Web/Web.config
+++ b/BeatDave.Web/Web.config
@@ -7,7 +7,7 @@
          connectionString="Url=http://localhost:8080;Database=BeatDave" />
     
     <add name="BeatDave_AspNet"
-         connectionString="Data Source=.;Initial Catalog=BeatDave_AspNet;Integrated Security=True"
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BeatDave_AspNet;Integrated Security=True"
          providerName="System.Data.SqlClient" />    
   </connectionStrings>
   
@@ -74,7 +74,7 @@
       </providers>
     </membership>
     
-    <roleManager defaultProvider="DefaultRoleProvider">
+    <roleManager defaultProvider="DefaultRoleProvider" enabled="true">
       <providers>
         <add name="DefaultRoleProvider"
              type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
